added ws endpoint to swagger
